--- a/notebooks/connectivity_matrices.ipynb
+++ b/notebooks/connectivity_matrices.ipynb
@@ -7,12 +7,211 @@
    "outputs": [],
    "source": [
     "from src.eeg import EEG, SET, epoch, ms, np, struct\n",
-    "from src.core import REc as rec\n",
+    "# from src.core import REc\n",
     "from src.data_legacy import band\n",
     "from src.connectivity import preprocess, connectivity_analysis, phaselock, phaselag, spectral_coherence, PEC, cross_correlation, PAC\n",
     "from src.tools import exclude_from_sz_cm \n",
     "from os import makedirs\n",
     "from joblib import Parallel, delayed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pylint: disable=no-self-argument, no-member\n",
+    "\n",
+    "from inspect import isfunction, ismethod, isgeneratorfunction, isgenerator, isroutine\n",
+    "from inspect import isabstract, isclass, ismodule, istraceback, isframe, iscode, isbuiltin\n",
+    "from inspect import ismethoddescriptor, isdatadescriptor, isgetsetdescriptor, ismemberdescriptor\n",
+    "from inspect import isawaitable, iscoroutinefunction, iscoroutine\n",
+    "\n",
+    "from collections.abc import Iterable as iterable\n",
+    "\n",
+    "from pickle import load, dump\n",
+    "\n",
+    "def isfx(field): return ismethod(field) or isfunction(field)\n",
+    "\n",
+    "class GhostSet:\n",
+    "    \"\"\" enhanced interface (ghost) to retrieve class fields \"\"\"\n",
+    "    def _meta(data): return {k:v for k,v in data.__dict__.items() if not isfx(v)}\n",
+    "    def _at_last(_, sets): pass\n",
+    "    def _set(object, **sets):\n",
+    "        ''' use to fast initialize fields | needed to avoid initialization problems at copy by value '''\n",
+    "        for field in sets: setattr(object, field, sets[field])\n",
+    "        object._at_last(sets)\n",
+    "GSet = GhostSet\n",
+    "\n",
+    "def meta(object):\n",
+    "    ''' retrieves clonable object metadata (__dict__) as a copy '''\n",
+    "    if isinstance(object, GSet): return object._meta()\n",
+    "    return {}\n",
+    "\n",
+    "class ClonableObjectGhost:\n",
+    "    \"\"\" enhanced interface (ghost) for clonable objects \"\"\"\n",
+    "    def _by_val(_, depth=-1, _layer=0): pass\n",
+    "GCo = ClonableObjectGhost\n",
+    "\n",
+    "class ClonableObject(GSet, GCo):\n",
+    "    \"\"\" base clonable object \"\"\"\n",
+    "    def __init__(this, **data): this._set(**data)\n",
+    "    def __call__(_, **options): _._set(**options)\n",
+    "    def _by_val(_, depth=-1, _layer=0):\n",
+    "        copy = type(_)()\n",
+    "        copy._set(**_._meta())\n",
+    "        if depth<0 or depth>_layer:\n",
+    "            for field in copy.__dict__:\n",
+    "                if isinstance(copy.__dict__[field], ClonableObjectGhost):\n",
+    "                    copy.__dict__[field] = copy.__dict__[field]._by_val(depth,_layer+1)\n",
+    "        return copy\n",
+    "COb = ClonableObject\n",
+    "\n",
+    "def copy_by_val(object, depth=-1, _layer=0):\n",
+    "    if isinstance(object, GCo): return object._by_val(depth,_layer)\n",
+    "    return object\n",
+    "copy = by_val = vof = copy_by_val\n",
+    "\n",
+    "class ComparableGhost:\n",
+    "    \"\"\" enhanced interface (ghost) for comparing instances \"\"\"\n",
+    "    def _compare(a, b):\n",
+    "        if type(a) != type(b): return False\n",
+    "        if a.__dict__ == b.__dict__: return True\n",
+    "        return False\n",
+    "    def __eq__(a, b): return a._compare(b)\n",
+    "GEq = ComparableGhost\n",
+    "\n",
+    "class IterableObjectGhost(GSet):\n",
+    "    \"\"\" enhanced interface (ghost) for iterables: exposes __dict__,\n",
+    "        therefore Iterable Objects are like lua dictionaries \"\"\"\n",
+    "    def __contains__(this, key): return key in this.__dict__\n",
+    "    def __iter__(this): return iter(this.__dict__)\n",
+    "    def items(my): return my.__dict__.items()\n",
+    "    def __getitem__(by, field): return by.__dict__[field]\n",
+    "    def __setitem__(by, field, value): by.__dict__[field] = value\n",
+    "    def pop(by, field): return by.__dict__.pop(field)\n",
+    "GIo = IterableObjectGhost\n",
+    "\n",
+    "class ReprGhost:\n",
+    "    \"\"\" enhanced interface (ghost) for the skeleton method _repr,\n",
+    "        see implementation of Struct for a working example;\n",
+    "        Record __repr__ override uses _lines_ for max lines display \"\"\"\n",
+    "    _lines_ = 31\n",
+    "    _chars_ = 13\n",
+    "    _msgsz_ = 62\n",
+    "    _ellipsis_ = ' ... '\n",
+    "    def _repr(my, value):\n",
+    "        _type = ''.join(''.join(str(type(value)).split('class ')).split(\"'\"))\n",
+    "        _value = '{}'.format(value)\n",
+    "        if len(_value)>my._chars_:\n",
+    "            show = int(my._chars_/2)\n",
+    "            _value = _value[:show]+my._ellipsis_+_value[-show:]\n",
+    "        return '{} {}'.format(_type, _value)\n",
+    "    def _resize(this, message, at=.7):\n",
+    "        if len(message)>this._msgsz_:\n",
+    "            start = int(at*this._msgsz_)\n",
+    "            end = this._msgsz_-start\n",
+    "            return message[:start]+this._ellipsis_+message[-end:]\n",
+    "        return message\n",
+    "GRe = ReprGhost\n",
+    "\n",
+    "def set_repr_to(lines): GRe._lines_ = lines\n",
+    "\n",
+    "class Struct(COb, GEq, GIo, GRe):\n",
+    "    \"\"\" structured autoprintable object, behaves like a lua dictionary \"\"\"\n",
+    "    def __repr__(_):\n",
+    "        return '\\n'.join(['{}:\\t{}'.format(k, _._repr(v)) for k,v in _.items()])\n",
+    "struct = Struct\n",
+    "\n",
+    "class RecordableGhost:\n",
+    "    \"\"\" enhanced interface (ghost) for type recording,\n",
+    "        see Record for a working example \"\"\"\n",
+    "    @staticmethod\n",
+    "    def load(filename):\n",
+    "        with open(filename, 'rb') as file: return load(file)\n",
+    "    def save(data, filename):\n",
+    "        with open(filename, 'wb') as file: dump(data, file)\n",
+    "        \n",
+    "GRec = RecordableGhost\n",
+    "\n",
+    "class Record(GSet, GCo, GRec, GEq, GRe):\n",
+    "    \"\"\" wrapper for any object or value, auto-inspects and provides load/save type structure \"\"\"\n",
+    "    data = None\n",
+    "    _check = dict(\n",
+    "            isfunction=isfunction, ismethod=ismethod, isgeneratorfunction=isgeneratorfunction, isgenerator=isgenerator, isroutine=isroutine,\n",
+    "            isabstract=isabstract, isclass=isclass, ismodule=ismodule, istraceback=istraceback, isframe=isframe, iscode=iscode, isbuiltin=isbuiltin,\n",
+    "            ismethoddescriptor=ismethoddescriptor, isdatadescriptor=isdatadescriptor, isgetsetdescriptor=isgetsetdescriptor, ismemberdescriptor=ismemberdescriptor,\n",
+    "            isawaitable=isawaitable, iscoroutinefunction=iscoroutinefunction, iscoroutine=iscoroutine\n",
+    "                   )\n",
+    "    def __init__(this, token, **meta):\n",
+    "        this.data = token\n",
+    "        this.__dict__.update({k:v(token) for k,v in this._check.items()})\n",
+    "        super()._set(**meta)\n",
+    "    @property\n",
+    "    def type(_): return type(_.data)\n",
+    "    def inherits(_, *types): return issubclass(_.type, types)\n",
+    "    @property\n",
+    "    def isbaseiterable(_): return _.inherits(tuple, list, dict, set) or _.isgenerator or _.isgeneratorfunction\n",
+    "    @property\n",
+    "    def isiterable(_): return isinstance(_.data, iterable) and _.type is not str\n",
+    "    def _clone_iterable(_):\n",
+    "        if _.inherits(dict): return _.data.copy()\n",
+    "        elif _.isgenerator or _.isgeneratorfunction: return (i for i in list(_.data))\n",
+    "        else: return type(_.data)(list(_.data)[:])\n",
+    "    def _meta(data): return {k:v for k,v in data.__dict__.items() if k != 'data' and not isfx(v)}\n",
+    "    def _by_val(_, depth=-1, layer=0):\n",
+    "        data = _.data\n",
+    "        if _.isiterable: data = _._clone_iterable()\n",
+    "        elif _.inherits(ClonableObjectGhost): data = by_val(data, depth, layer)\n",
+    "        return type(_)(data, **meta(_))\n",
+    "    def __enter__(self): self._instance = self; return self\n",
+    "    def __exit__(self, type, value, traceback): self._instance = None\n",
+    "    def __repr__(self):\n",
+    "        if not hasattr(self, '_preprint'): return Record(self.data, _preprint='', _lines=Record(Record._lines_)).__repr__()\n",
+    "        if self.isbaseiterable:\n",
+    "            pre, repr = self._preprint, ''\n",
+    "            for n,i in enumerate(self.data):\n",
+    "                if self._lines.data == 0: break\n",
+    "                else: self._lines.data -= 1\n",
+    "                index, item = str(n), i\n",
+    "                if self.inherits(dict): index += ' ({})'.format(str(i)); item = self.data[i]\n",
+    "                repr += pre+'{}: '.format(index)\n",
+    "                next = Record(item, _preprint=pre+'\\t', _lines=self._lines)\n",
+    "                if next.isiterable: repr += '\\n'\n",
+    "                repr += next.__repr__()\n",
+    "                repr += '\\n'\n",
+    "            return repr\n",
+    "        elif self.inherits(GCo): return Record(self.data._meta(), _preprint=self._preprint, _lines=self._lines).__repr__()\n",
+    "        else: return self._repr(self.data)\n",
+    "REc = Record\n",
+    "\n",
+    "class Bisect(list, COb):\n",
+    "    \"\"\" bisect implementation using clonable objects \"\"\"\n",
+    "    def __init__(set, *items, key=None, reverse=False):\n",
+    "        if not key: key = lambda  x:x\n",
+    "        super().__init__(sorted(items, reverse=reverse, key=key))\n",
+    "    def _bisect(set, item, key, reverse, bottom, top):\n",
+    "        def _(check):\n",
+    "            if key: return key(check)\n",
+    "            return check\n",
+    "        at = int((top-bottom)/2)+bottom\n",
+    "        if len(set)==0: return (0,-1)\n",
+    "        if item==_(set[at]): return (at,0)\n",
+    "        bigger = item<_(set[at])\n",
+    "        if bigger != reverse:\n",
+    "            if at-bottom>0: return set._bisect(item, key, reverse, bottom, at)\n",
+    "            return (at,-1)\n",
+    "        elif top-at>1: return set._bisect(item, key, reverse, at, top)\n",
+    "        return (at,1)\n",
+    "    def search(_, item, key=None, reverse=False):\n",
+    "        if not key: key = lambda x:x\n",
+    "        return _._bisect(item, key, reverse, 0, len(_))\n",
+    "    def _by_val(_, depth=-1, _layer=0):\n",
+    "        copy = super()._by_val(depth, _layer)\n",
+    "        copy += _[:]\n",
+    "        return copy\n",
+    "BSx = Bisect"
    ]
   },
   {
@@ -453,8 +652,8 @@
     "path_cm = main_folder + \"connectivity_matrices/\"\n",
     "makedirs(path_cm, exist_ok=True)\n",
     "\n",
-    "if Bands:          rec(cm).save(path_cm + f\"{subject_id}-{woi_code[woi]}-{method_code[method_idx]}{ext}-{bands}.prep\".replace(\" \",\"\")) \n",
-    "elif not Bands:    rec(cm).save(path_cm + f\"{subject_id}-{woi_code[woi]}-{method_code[method_idx]}{ext}.prep\") "
+    "if Bands:          REc(cm).save(path_cm + f\"{subject_id}-{woi_code[woi]}-{method_code[method_idx]}{ext}-{bands}.prep\".replace(\" \",\"\")) \n",
+    "elif not Bands:    REc(cm).save(path_cm + f\"{subject_id}-{woi_code[woi]}-{method_code[method_idx]}{ext}.prep\") "
    ]
   }
  ],
