--- a/notebooks/gcolab_connectivity_matrices.ipynb
+++ b/notebooks/gcolab_connectivity_matrices.ipynb
@@ -1890,7 +1890,7 @@
         "\n",
         "epochs = fpp_seizure + fpp_baseline\n",
         "\n",
-        "if method_code[method_idx] == \"SC_\":\n",
+        "if method_code[method_idx] == \"SC\":\n",
         "    cm._set(X = connectivity_analysis(epochs, spectral_coherence, fs=resampling, imag=imag))\n",
         "\n",
         "elif method_code[method_idx] == \"PEC\": \n",
