--- a/notebooks/plot_cvs.ipynb
+++ b/notebooks/plot_cvs.ipynb
@@ -227,10 +227,10 @@
    "outputs": [],
    "source": [
     "subject_id = \"ASJ\"\n",
-    "measure = \"SCR\"\n",
+    "measure = \"CC\"\n",
     "bands=[\"(0,4)\"]#, \"(4,8)\", \"(8,12)\", \"(12,30)\", \"(30,70)\", \"(70,150)\"]\n",
     "\n",
-    "wois = [\"preseizure5\", \"preseizure4\", \"preseizure3\", \"preseizure2\", \"preseizure1\", \"transition1\", \"transition2\", \"transition60\"]\n",
+    "wois = [\"preseizure5\", \"preseizure4\", \"preseizure3\", \"preseizure2\", \"preseizure1\", \"transition1\", \"transition60\"]\n",
     "print(\"Considered sequence of WOIs:\", wois)\n",
     "\n",
     "nodes = ['P1-P2', 'P4-P5', 'P8-P9', 'P9-P10', 'P10-P11', 'G1-G2', 'G8-G9', 'G9-G10', 'G10-G11', 'G11-G12', 'M1-M2', 'M8-M9', 'M9-M10', 'M10-M11', 'M11-M12', 'O1-O2', 'O2-O3', 'O5-O6', 'O6-O7', 'F1-F2', 'F7-F8', 'F8-F9', 'F9-F10', 'F10-F11', 'F11-F12', 'F12-F13', 'A1-A2', 'A2-A3', 'A3-A4', 'A7-A8', 'A8-A9', 'A9-A10', 'A10-A11', 'B1-B2', 'B2-B3', 'B5-B6', 'B6-B7', 'B7-B8', 'B8-B9', 'C1-C2', 'C5-C6', 'C6-C7', 'C7-C8', 'C8-C9', 'C9-C10', 'Q1-Q2', 'Q2-Q3', 'Q3-Q4', 'Q4-Q5', 'Q8-Q9', 'Q9-Q10', 'Q10-Q11', 'Q11-Q12', 'T1-T2', 'T2-T3', 'T3-T4', 'T4-T5', 'T5-T6', 'T6-T7', 'T7-T8', 'T8-T9', 'T9-T10', 'T10-T11', 'T11-T12', 'D1-D2', 'D2-D3', 'D3-D4', 'D4-D5', 'D5-D6', 'D6-D7', 'D7-D8', 'E1-E2', 'E2-E3', 'E3-E4', 'E4-E5', 'E5-E6', 'E6-E7', 'E7-E8', 'E8-E9', 'E9-E10', 'E10-E11', 'L1-L2', 'L2-L3', 'L5-L6', 'L6-L7', 'L7-L8', 'U1-U2', 'U2-U3', 'U3-U4', 'U4-U5', 'U5-U6', 'U6-U7', 'J1-J2', 'J10-J11', 'J11-J12', 'J12-J13', 'J13-J14', 'J14-J15']\n",
@@ -258,26 +258,35 @@
     "\n",
     "        for pair in result.test_nets[2]:\n",
     "            if pair[0] in woi_cvs:\n",
-    "                woi_cvs[pair[0]].append(pair[3]) # Append CVSs\n",
-    "            else: woi_cvs[pair[0]] = [pair[3]]\n",
+    "                woi_cvs[pair[0]].append(pair[2]) # Append CVSs\n",
+    "            else: woi_cvs[pair[0]] = [pair[2]]\n",
     "\n",
-    "    cvs_pair_global = {pair:[np.average(cvs) for cvs in woi_cvs[pair]] for pair in woi_cvs}\n",
-    "    cvs_pair_local = {pair:[np.average(cvs) for cvs in woi_cvs[pair]] for pair in woi_cvs if nodes[pair[0]] in resection and nodes[pair[1]] in resection}\n",
+    "    # print(\"CVS per pair - all WOIs:\", woi_cvs)\n",
     "\n",
-    "    print(\"CVS per pair - all WOIs:\", woi_cvs)\n",
+    "    cvs_pair_neutral = {pair:[np.array(cvs) for cvs in woi_cvs[pair]] for pair in woi_cvs if nodes[pair[0]] not in resection and nodes[pair[1]] not in resection}\n",
+    "    cvs_pair_resection = {pair:[np.array(cvs) for cvs in woi_cvs[pair]] for pair in woi_cvs if nodes[pair[0]] in resection and nodes[pair[1]] in resection}\n",
     "\n",
-    "    rows, cols = int(len(cvs_pair_local)/6), 6\n",
-    "    fig, axs = plt.subplots(rows, cols, figsize=(25,60))\n",
+    "    # rows, cols = int(len(cvs_pair_resection)/6), 6\n",
+    "    # fig, axs = plt.subplots(rows, cols, figsize=(25,60))\n",
     "\n",
-    "    local_pairs = list(cvs_pair_local.keys())\n",
+    "    # local_pairs = list(cvs_pair_resection.keys())\n",
     "\n",
-    "    for i in range(rows):\n",
-    "        for j in range(cols):\n",
-    "            axs[i][j].plot(cvs_pair_local[local_pairs[i+j]])\n",
-    "            axs[i][j].set_title(f\"'{nodes[local_pairs[i+j][0]]}'-'{nodes[local_pairs[i+j][1]]}'\")\n",
+    "    # for i in range(rows):\n",
+    "    #     for j in range(cols):\n",
+    "    #         axs[i][j].boxplot(cvs_pair_resection[local_pairs[i+j]])\n",
+    "    #         axs[i][j].set_title(f\"'{nodes[local_pairs[i+j][0]]}'-'{nodes[local_pairs[i+j][1]]}'\")\n",
     "\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()   "
+    "    # fig.tight_layout()\n",
+    "    # plt.show()   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cvs_pair_resection"
    ]
   }
  ],
