--- a/notebooks/find_en_combs.ipynb
+++ b/notebooks/find_en_combs.ipynb
@@ -255,44 +255,87 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create combinations of connectivity measures for the chosen WOI."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm_combs = []\n",
+    "cm_filenames = [filename for filename in listdir(path_cm) if woi_code[woi] in filename]\n",
+    "\n",
+    "n_cms = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "epoch_data_woi, epoch_data_base = {},{}\n",
-    "for file_cm in listdir(path_cm):\n",
-    "  \n",
-    "  if file_cm.split(\"-\")[1]==woi_code[woi] and \"CC\" in file_cm:\n",
     "\n",
-    "    print(\"\\n--------------------------------------------------------------\")\n",
-    "    print(\"\\nProcessing...\")\n",
+    "x=0\n",
+    "for comb in combinations(cm_filenames, n_cms):\n",
+    "  if x==1:break\n",
+    "  else:\n",
+    "    # For creating the filename of the file with results (RES file)\n",
+    "    subject_id, measure = \"\", \"\"\n",
+    "    print(comb)\n",
+    "    for file_cm in comb:\n",
+    "    \n",
+    "      print(\"\\n--------------------------------------------------------------\")\n",
+    "      print(\"Connectivity matrices of\", file_cm)\n",
     "\n",
-    "    subject_id = file_cm.split(\"/\")[-1][0:3]\n",
-    "    print(\"Connectivity matrices of\", file_cm)\n",
+    "      subject_id = file_cm.split(\"/\")[-1][0:3]\n",
+    "      measure += file_cm.split(\"/\")[-1].split(\"-\")[2] + file_cm.split(\"/\")[-1].split(\"-\")[3].split(\".\")[0]\n",
     "\n",
-    "    cm = REc.load(path_cm + file_cm).data\n",
+    "      cm = REc.load(path_cm + file_cm).data\n",
     "\n",
-    "    nodes = cm.nodes\n",
-    "    node_ids = list(range(len(nodes))) \n",
+    "      nodes = cm.nodes\n",
+    "      node_ids = list(range(len(nodes))) \n",
     "\n",
-    "    e_woi = cm.X[0:int(len(cm.X)/2)]\n",
-    "    e_base = cm.X[int(len(cm.X)/2)::]\n",
+    "      e_woi = cm.X[0:int(len(cm.X)/2)]\n",
+    "      e_base = cm.X[int(len(cm.X)/2)::]\n",
     "\n",
-    "    eid_woi = cm.i[0:int(len(cm.i)/2)]\n",
-    "    eid_base = cm.i[int(len(cm.i)/2)::]\n",
+    "      eid_woi = cm.i[0:int(len(cm.i)/2)]\n",
+    "      eid_base = cm.i[int(len(cm.i)/2)::]\n",
     "\n",
-    "    X =None\n",
-    "    for j, eid in enumerate(eid_woi):\n",
-    "        if eid in epoch_data_woi: X = np.concatenate((epoch_data_woi[eid], e_woi[j].reshape((1, e_woi[j].shape[0], e_woi[j].shape[1]))), axis=0)\n",
-    "        else: X = e_woi[j].reshape((1, e_woi[j].shape[0], e_woi[j].shape[1]))\n",
-    "        epoch_data_woi[eid] = X\n",
+    "      X =None\n",
+    "      for j, eid in enumerate(eid_woi):\n",
+    "          if eid in epoch_data_woi: X = np.concatenate((epoch_data_woi[eid], e_woi[j].reshape((1, e_woi[j].shape[0], e_woi[j].shape[1]))), axis=0)\n",
+    "          else: X = e_woi[j].reshape((1, e_woi[j].shape[0], e_woi[j].shape[1]))\n",
+    "          epoch_data_woi[eid] = X\n",
     "\n",
-    "    for j, eid in enumerate(eid_base):\n",
-    "        if eid in epoch_data_base: X = np.concatenate((epoch_data_base[eid], e_base[j].reshape((1, e_base[j].shape[0], e_base[j].shape[1]))), axis=0)\n",
-    "        else: X = e_base[j].reshape((1, e_base[j].shape[0], e_base[j].shape[1]))\n",
-    "        epoch_data_base[eid] = X"
+    "      for j, eid in enumerate(eid_base):\n",
+    "          if eid in epoch_data_base: X = np.concatenate((epoch_data_base[eid], e_base[j].reshape((1, e_base[j].shape[0], e_base[j].shape[1]))), axis=0)\n",
+    "          else: X = e_base[j].reshape((1, e_base[j].shape[0], e_base[j].shape[1]))\n",
+    "          epoch_data_base[eid] = X\n",
+    "      x+=1"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The results will be saved as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_filename = \"-\".join((subject_id, woi_code[woi], measure)) + \".res\"\n",
+    "print(res_filename)"
    ]
   },
   {
@@ -392,7 +435,7 @@
     "    print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
     "\n",
     "    file_net = file_cm.split(\".\")[0]\n",
-    "    REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
+    "    # REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
     "    break\n",
     "\n",
     "  else:\n",
@@ -465,7 +508,7 @@
     "      print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
     "\n",
     "      file_net = file_cm.split(\".\")[0]\n",
-    "      REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
+    "      # REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
     "      break\n",
     "\n",
     "  if net_size==max_net_size+1:\n",
@@ -476,9 +519,16 @@
     "    print(f\"\\nSelected network: {selected_net} ({len(selected_net)} nodes in total)\")\n",
     "\n",
     "    file_net = file_cm.split(\".\")[0]\n",
-    "    REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
+    "    # REc(struct(test_nets=all_node_groups, nodes=selected_net)).save(path_net + f\"{file_net}.res\")\n",
     "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
