--- a/notebooks/find_en.ipynb
+++ b/notebooks/find_en.ipynb
@@ -6,8 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.eeg import struct\n",
-    "from src.tools import exclude_from_sz_cm\n",
     "from src.game import classify_epochs, evaluate_nodes, check_until\n",
     "# from src.core import REc\n",
     "\n",
@@ -24,8 +22,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pylint: disable=no-self-argument, no-member\n",
-    "\n",
     "from inspect import isfunction, ismethod, isgeneratorfunction, isgenerator, isroutine\n",
     "from inspect import isabstract, isclass, ismodule, istraceback, isframe, iscode, isbuiltin\n",
     "from inspect import ismethoddescriptor, isdatadescriptor, isgetsetdescriptor, ismemberdescriptor\n",
@@ -264,14 +260,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Explain the rec object, how to access the results and the pipeline in the markdown above.\n",
-    "\n",
-    "from itertools import combinations\n",
-    "from os import listdir\n",
-    "import matplotlib.pyplot as plt\n",
-    "from joblib import Parallel, delayed\n",
-    "import random as rd\n",
-    "\n",
     "for file_cm in listdir(path_cm):\n",
     "  \n",
     "  if file_cm.split(\"-\")[1]==woi_code[woi]:\n",
@@ -289,9 +277,9 @@
     "    print(\"Number of nodes =\",len(nodes))\n",
     "    print(\"\\nNodes:\", nodes)\n",
     "\n",
-    "    # print(\"\\nTotal number of epochs =\", len(cm.X))\n",
-    "    # print(\"Connectivity matrix shape =\", cm.X[0].shape)\n",
-    "    # print(\"All matrices have the same shape:\", all([m.shape==(len(nodes),len(nodes)) for m in cm.X]))\n",
+    "    print(\"\\nTotal number of epochs =\", len(cm.X))\n",
+    "    print(\"Connectivity matrix shape =\", cm.X[0].shape)\n",
+    "    print(\"All matrices have the same shape:\", all([m.shape==(len(nodes),len(nodes)) for m in cm.X]))\n",
     "    # plt.figure(figsize=(5,5))\n",
     "    # plt.imshow(cm.X[-1], cmap='Blues', interpolation='nearest')\n",
     "    # plt.show()\n",
