--- a/notebooks/figures.ipynb
+++ b/notebooks/figures.ipynb
@@ -268,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "woi_code = {'1':\"baseline\", '2':\"preseizure5\", '3':\"preseizure4\", '4':\"preseizure3\", '5':\"preseizure2\", '6':\"preseizure1\", '7':\"transition1\", '8':\"transition2\", '9':\"transition60\", '10':\"seizure\"}\n",
+    "woi_code = {'2':\"preseizure5\", '3':\"preseizure4\", '4':\"preseizure3\", '5':\"preseizure2\", '6':\"preseizure1\", '7':\"transition1\", '8':\"transition2\", '9':\"transition60\"}\n",
     "woi_code_inverted = {y:x for x,y in woi_code.items()}"
    ]
   },
@@ -414,15 +414,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_woi = \"preseizure5\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "selected_woi = \"preseizure5\"\n",
+    "\n",
     "best_combs = []\n",
     "\n",
     "woi_nets, woi_cms = {},{}\n",
@@ -560,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize Venn diagrams of nets found based on top connectivity measures."
+    "Check nets based on best combination."
    ]
   },
   {
@@ -569,7 +562,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe_best_combs = pd.read_excel(main_folder + f\"{selected_subject}_BEST_COMB_RESULTS.xlsx\", sheet_name=\"preseizure5\")"
+    "for selected_woi in woi_code.values():\n",
+    "\n",
+    "    print(f\"\\nWOI = {selected_woi}\")\n",
+    "\n",
+    "    dataframe = pd.read_excel(main_folder + \"RESULTS.xlsx\", sheet_name=selected_subject)\n",
+    "    dataframe_best_combs = pd.read_excel(main_folder + f\"{selected_subject}_BEST_COMB_RESULTS.xlsx\", sheet_name=selected_woi)\n",
+    "\n",
+    "    top_methods = {}\n",
+    "\n",
+    "    NETS = {}\n",
+    "\n",
+    "    max_score = max(dataframe_best_combs[\"SCORE\"])\n",
+    "    max_score_idx = [i for i in range(len(dataframe_best_combs[\"SCORE\"])) if dataframe_best_combs[\"SCORE\"][i] == max_score]\n",
+    "\n",
+    "    print(f\"Best score = {max_score}\")\n",
+    "    print(f\"Number of combinations = {len(max_score_idx)}\")\n",
+    "\n",
+    "    print(\"Combinations of:\")\n",
+    "    for idx in max_score_idx:\n",
+    "\n",
+    "        cms = dataframe_best_combs[\"BEST_COMB\"][idx].split(\"-\")\n",
+    "        print(len(cms))\n",
+    "\n",
+    "        for cm in cms:\n",
+    "\n",
+    "            top_methods[cm] = 1 if cm not in top_methods else top_methods[cm]+1\n",
+    "\n",
+    "            acronym_len = len(cm.split(\"(\")[0])\n",
+    "            \n",
+    "            if cm[0:acronym_len]!=\"PAC\":\n",
+    "                cm_net = [node_label[1:-1] for node_label in list(dataframe.groupby([\"WOI\"]).get_group(selected_woi).groupby([\"CM\"]).get_group(cm[0:acronym_len]).groupby([\"F_MIN\"]).get_group(int(cm[acronym_len+1:-1].split(\",\")[0]))[\"NET\"])[0][1:-1].split(\", \")]\n",
+    "            else: \n",
+    "                cm_net = [node_label[1:-1] for node_label in list(dataframe.groupby([\"WOI\"]).get_group(selected_woi).groupby([\"CM\"]).get_group(cm[0:acronym_len])[\"NET\"])[0][1:-1].split(\", \")]\n",
+    "            \n",
+    "            if cm not in NETS: NETS[cm] = cm_net\n",
+    "    print(NETS)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Check best nets per combination."
    ]
   },
   {
@@ -578,41 +614,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_methods = {}\n",
+    "for selected_woi in woi_code.values():\n",
     "\n",
-    "max_score = max(dataframe_best_combs[\"SCORE\"])\n",
-    "max_score_idx = [i for i in range(len(dataframe_best_combs[\"SCORE\"])) if dataframe_best_combs[\"SCORE\"][i] == max_score]\n",
+    "    print(f\"\\nWOI = {selected_woi}\")\n",
     "\n",
-    "for idx in max_score_idx:\n",
-    "    cms = dataframe_best_combs[\"BEST_COMB\"][idx].split(\"-\")\n",
-    "    for cm in cms:\n",
+    "    dataframe = pd.read_excel(main_folder + \"RESULTS.xlsx\", sheet_name=selected_subject)\n",
+    "    dataframe_best_combs = pd.read_excel(main_folder + f\"{selected_subject}_BEST_COMB_RESULTS.xlsx\", sheet_name=selected_woi)\n",
     "\n",
-    "        top_methods[cm] = 1 if cm not in top_methods else top_methods[cm]+1\n",
+    "    top_methods = {}\n",
     "\n",
-    "        acronym_len = len(cm.split(\"(\")[0])\n",
-    "        \n",
-    "        if cm[0:acronym_len]!=\"PAC\":\n",
-    "            cm_net = [node_label[1:-1] for node_label in dataframe.groupby([\"WOI\"]).get_group(\"preseizure5\").groupby([\"CM\"]).get_group(cm[0:acronym_len]).groupby([\"F_MIN\"]).get_group(float(int(cm[acronym_len+1:-1].split(\",\")[0])))[\"NET\"][1].split(\", \")]\n",
-    "        else: \n",
-    "            cm_net = [node_label[1:-1] for node_label in dataframe.groupby([\"WOI\"]).get_group(\"preseizure5\").groupby([\"CM\"]).get_group(cm[0:acronym_len])[\"NET\"][1].split(\", \")]\n",
-    "        print(cm, cm_net)"
+    "    NETS = {}\n",
+    "\n",
+    "    n = 9\n",
+    "    n_idx = [i for i in range(len(dataframe_best_combs[\"N\"])) if dataframe_best_combs[\"N\"][i] == n]\n",
+    "\n",
+    "    for idx in n_idx:\n",
+    "        s = dataframe_best_combs[\"SCORE\"][idx]\n",
+    "        tp = dataframe_best_combs[\"TP\"][idx]\n",
+    "        fp = dataframe_best_combs[\"FP\"][idx]\n",
+    "        print(f\"Score = {s}\")\n",
+    "        print(f\"TP = {tp}\")\n",
+    "        print(f\"FP = {fp}\")\n",
+    "\n",
+    "\n",
+    "        cms = dataframe_best_combs[\"BEST_COMB\"][idx].split(\"-\")\n",
+    "        print(len(cms))\n",
+    "\n",
+    "        for cm in cms:\n",
+    "\n",
+    "            top_methods[cm] = 1 if cm not in top_methods else top_methods[cm]+1\n",
+    "\n",
+    "            acronym_len = len(cm.split(\"(\")[0])\n",
+    "            \n",
+    "            if cm[0:acronym_len]!=\"PAC\":\n",
+    "                cm_net = [node_label[1:-1] for node_label in list(dataframe.groupby([\"WOI\"]).get_group(selected_woi).groupby([\"CM\"]).get_group(cm[0:acronym_len]).groupby([\"F_MIN\"]).get_group(int(cm[acronym_len+1:-1].split(\",\")[0]))[\"NET\"])[0][1:-1].split(\", \")]\n",
+    "            else: \n",
+    "                cm_net = [node_label[1:-1] for node_label in list(dataframe.groupby([\"WOI\"]).get_group(selected_woi).groupby([\"CM\"]).get_group(cm[0:acronym_len])[\"NET\"])[0][1:-1].split(\", \")]\n",
+    "            \n",
+    "            if cm not in NETS: NETS[cm] = cm_net\n",
+    "    print(NETS)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(top_methods)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
