--- a/notebooks/connectivity_matrices.ipynb
+++ b/notebooks/connectivity_matrices.ipynb
@@ -21,8 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pylint: disable=no-self-argument, no-member\n",
-    "\n",
     "from inspect import isfunction, ismethod, isgeneratorfunction, isgenerator, isroutine\n",
     "from inspect import isabstract, isclass, ismodule, istraceback, isframe, iscode, isbuiltin\n",
     "from inspect import ismethoddescriptor, isdatadescriptor, isgetsetdescriptor, ismemberdescriptor\n",
@@ -292,7 +290,7 @@
    "source": [
     "span, step = 1000, 500      # in ms\n",
     "min_woi_duration = 60000    # in ms\n",
-    "n_epochs = int((min_woi_duration/step)-1)\n",
+    "n_epochs = int(((min_woi_duration/step)-1)/2)\n",
     "\n",
     "print(\"Number of epochs to consider for classification =\", n_epochs)\n",
     "\n",
@@ -350,39 +348,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: The code below is not redundant, double check for each patient and create a redundant version\n",
-    "\n",
     "nodes_seizure = list(eeg_seizure.axes.region)\n",
     "nodes_baseline = list(eeg_baseline.axes.region)\n",
     "\n",
-    "nodes=[]\n",
-    "missing_node_ids=[]\n",
-    "extra_nodes_in = None\n",
+    "montage_overlap = list(set(nodes_seizure) & set(nodes_baseline))\n",
     "\n",
-    "if nodes_seizure==nodes_baseline: nodes = nodes_seizure\n",
-    "else:\n",
-    "    if len(nodes_seizure)>len(nodes_baseline): \n",
-    "        extra_nodes_in = \"seizure\"\n",
-    "        missing_nodes, nodes = [node for node in nodes_seizure if node not in nodes_baseline], nodes_seizure\n",
-    "        for missing in missing_nodes: \n",
-    "            print(f\"Node {missing} removed from seizure file as not present in baseline file.\")\n",
-    "            missing_node_ids.append(nodes.index(missing))\n",
-    "            del nodes[nodes.index(missing)]\n",
-    "            eeg_seizure.axes.region.remove(missing)\n",
-    "    \n",
-    "    elif len(nodes_seizure)<len(nodes_baseline): \n",
-    "        extra_nodes_in = \"baseline\"\n",
-    "        missing_nodes, nodes = [node for node in nodes_baseline if node not in nodes_seizure], nodes_baseline\n",
-    "        for missing in missing_nodes: \n",
-    "            for missing in missing_nodes: \n",
-    "                print(f\"Node {missing} removed from baseline file as not present in seizure file.\")\n",
-    "                missing_node_ids.append(nodes.index(missing))\n",
-    "                del nodes[nodes.index(missing)]\n",
-    "                eeg_baseline.axes.region.remove(missing)\n",
+    "extra_in_baseline = [ch for ch in nodes_baseline if ch not in montage_overlap]\n",
+    "extra_in_seizure = [ch for ch in nodes_seizure if ch not in montage_overlap]\n",
     "\n",
-    "print(\"\\nFiles now have the same nodes:\", nodes_seizure==nodes_baseline)\n",
-    "print(\"Number of nodes =\", len(nodes))\n",
-    "print(nodes)"
+    "if not extra_in_baseline and not extra_in_seizure: print(f\"\\nEEG channels (nodes) match between the seizure and baseline recordings ({len(montage_overlap)} nodes).\")\n",
+    "\n",
+    "elif extra_in_baseline: \n",
+    "    print(f\"\\nExtra nodes in baseline recording ({len(nodes_baseline)} total): {extra_in_baseline}\")\n",
+    "    for chn in extra_in_baseline: eeg_baseline.axes.region.remove(chn)\n",
+    "\n",
+    "elif extra_in_seizure: \n",
+    "    print(f\"\\nExtra nodes in seizure recording ({len(nodes_seizure)} total): {extra_in_seizure}\")\n",
+    "    for chn in extra_in_seizure: eeg_seizure.axes.region.remove(chn)\n",
+    "\n",
+    "print(f\"Number of common nodes = {len(montage_overlap)}\")\n",
+    "print(montage_overlap)\n",
+    "\n",
+    "nodes = montage_overlap"
    ]
   },
   {
@@ -399,20 +386,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check sampling\n",
-    "\n",
-    "if eeg_baseline.fs == 50 and eeg_seizure.fs == 50: \n",
+    "# original sampling from subsmeta.xlsx table\n",
+    "subject_fs = {'VBM':250, 'JQN':500, 'BGL':500, 'HDW':500, 'ASJ':500, 'SDA':500, 'MGM':500, 'MSF':500, 'PTD':500, 'RGE':500, 'SRM':500, 'CRD':500, 'CRF':500, 'GTA':500, 'HAF':500, 'VML':1024, 'MRI':500, 'USA':512, 'BRM':512, 'MMM':2048, 'VCG':500}\n",
     "    \n",
-    "    print(\"WARNING: The sampling frequency may have been incorrectly filed... Overwrite with data from subsmeta.xlsx table for now; check with Ale later\")\n",
-    "    eeg_seizure._set(fs = 500)\n",
-    "    eeg_baseline._set(fs = 500)\n",
+    "print(\"WARNING: The sampling frequency incorrectly filed using pyEDFlib... Overwriting with original sampling.\")\n",
+    "eeg_seizure._set(fs = subject_fs[subject_id])\n",
+    "eeg_baseline._set(fs = subject_fs[subject_id])\n",
     "\n",
     "print(\"Sampling freqency (seizure file) =\", eeg_seizure.fs)\n",
     "print(\"Sampling freqency (baseline file) =\", eeg_baseline.fs)\n",
     "\n",
     "fs_min = min(eeg_seizure.fs, eeg_baseline.fs)\n",
     "\n",
-    "# set the resampled frequency to 500 Hz if sampling is not already 512 Hz\n",
+    "# set the desired resampled frequency to 500 Hz if sampling is not already 512 Hz\n",
     "resampling = 512 if fs_min==512 else 500"
    ]
   },
